<resources>
    <string name="app_name">Unibet Football Data</string>
    <string name="app_designed_by">Unibet France</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="share_with">Share with</string>
    <string name="nav_header_text">Bienvenue dans l\'application Unibet Football Data</string>
    <string name="nav_next_matches_view">Prochains Matchs</string>
    <string name="nav_scrolling">Scrolling</string>
    <string name="nav_fullscreen">Fullscreen</string>
    <string name="nav_bottom_navigation">Bottom Navigation</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_bottom_appbar">Bottom App Bar</string>
    <string name="nav_about">About</string>
    <string name="nav_donate">Donations</string>
    <string name="main_feedback_email">Feedback:MaterialDesign2</string>
    <string name="main_not_found_email">Not found email app</string>
    <string name="nav_my_apps">My Apps</string>
    <string name="tab_title_main_1">Cards</string>
    <string name="tab_title_main_2">Dialogs</string>
    <string name="tab_title_main_3">Widgets</string>
    <string name="tab_title_main_4">Stats</string>
    <string name="main_snack_bar">This is a snack bar</string>
    <string name="main_snack_bar_action">Okay</string>
    <string name="main_card_title">Title goes here</string>
    <string name="main_card_with_stroke_title">Card with stroke</string>
    <string name="main_card_title_short">Title</string>
    <string name="main_card_subtitle">Subtitle here</string>
    <string name="main_card_details">Details here</string>
    <string name="main_card_button_1">ACTION 1</string>
    <string name="main_card_button_2">ACTION 2</string>
    <string name="main_flat_button_1_clicked">Action 1</string>
    <string name="main_flat_button_2_clicked">Action 2</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_neutral">Neutral</string>
    <string name="dialog_close">Close</string>
    <string name="main_dialog_simple">Simple dialog</string>
    <string name="main_dialog_simple_title">A simple dialog</string>
    <string name="main_dialog_simple_message">
        "A material metaphor is the unifying theory of a rationalized space and a system of motion. "
        "\nThe material is grounded in tactile reality, inspired by the study of paper and ink, yet technologically advanced and open to imagination and magic."</string>
    <string name="main_dialog_single_choice">Single choice dialog</string>
    <string name="main_dialog_multi_choice">Multi choice dialog</string>
    <string name="main_dialog_progress_title">Progress dialog…</string>
    <string name="main_dialog_progress">Progress dialog</string>
    <string name="main_dialog_data_picker">Date Picker Dialog</string>
    <string name="main_dialog_data_time">Time Picker Dialog</string>
    <string name="main_dialog_bottom">Bottom Dialog</string>
    <string name="main_dialog_fullscreen">Fullscreen Dialog</string>
    <string name="main_popup_menu">Popup Menu</string>
    <string name="main_widget_material_button">Material Buttons</string>
    <string name="main_widget_material_button_default">Round corner button</string>
    <string name="main_widget_material_button_stroke">Button with stroke</string>
    <string name="main_widget_material_button_unelevated">Unelevated button</string>
    <string name="main_widget_material_button_outline">Outlined button</string>
    <string name="main_widget_material_button_text">Text button</string>
    <string name="main_widget_material_button_icon">Icon button</string>
    <string name="main_widget_toggle_button">Toggle Button</string>
    <string name="main_widget_toggle_group">Button Toggle Group</string>
    <string name="main_widget_switch">Switch</string>
    <string name="main_widget_check_box">Check Box</string>
    <string name="main_widget_check_box_1">CheckBox 1</string>
    <string name="main_widget_check_box_2">CheckBox 2</string>
    <string name="main_widget_check_box_3">CheckBox 3</string>
    <string name="main_widget_radio">Radio Group and Radio Buttons</string>
    <string name="main_widget_radio_button_1">RadioButton 1</string>
    <string name="main_widget_radio_button_2">RadioButton 2</string>
    <string name="main_widget_radio_button_3">RadioButton 3</string>
    <string name="main_widget_seek_bar">Seek Bar</string>
    <string name="main_widget_progress_bar">Progress Bar</string>
    <string name="main_widget_extract_edit_text">Extract Edit Text</string>
    <string name="main_widget_text_input_layout">Text Input Layout</string>
    <string name="main_widget_edit_text_outline_box">Outlined Box</string>
    <string name="main_widget_edit_text_filled_box">Filled Box</string>
    <string name="main_widget_spinner">Spinner</string>
    <string name="main_widget_data_picker">Date Picker</string>
    <string name="main_widget_time_picker">Time Picker</string>
    <string name="main_widget_chip">Chips</string>
    <string name="title_activity_next_matches_view">Prochains Matchs</string>
    <string name="tv_recycler_item_1">Swipe down to refresh</string>
    <string name="tv_recycler_item_2">Swipe left or right to dismiss it</string>
    <string name="tv_recycler_item_3">Drag up or down to move it</string>
    <string name="title_activity_share_view">Share View</string>
    <string name="share_view_press_it">You can press it</string>
    <string name="no_more_data">No more data</string>
    <string name="item_swipe_dismissed">Dismissed</string>
    <string name="item_swipe_undo">Undo</string>
    <string name="extended_fab">Extended Fab</string>
    <string name="title_activity_scrolling">Scrolling</string>
    <string name="stats_choice_league">Competition</string>
    <string name="stats_choice_home_team">Home Team</string>
    <string name="stats_choice_away_team">Away Team</string>
    <string name="analyse_stat_text">Anaylse Statistique</string>
    <string name="date_debut_datepicker">Date de début</string>
    <string name="date_fin_datepicker">Date de fin</string>
</resources>