<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/dimen_common"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/dimen_common">

        <TextView
            android:id="@+id/competitionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/stats_choice_league"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinnerCompetition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/competitionName"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="-22dp"
            android:layout_toRightOf="@id/competitionName" />

        <TextView
            android:id="@+id/hometeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/competitionName"
            android:text="@string/stats_choice_home_team"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinnerHomeTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hometeam"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="-22dp"
            android:layout_toRightOf="@id/hometeam" />

        <TextView
            android:id="@+id/awayteam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hometeam"
            android:layout_marginTop="28dp"
            android:text="@string/stats_choice_away_team"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinnerAwayTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinnerHomeTeam"
            android:layout_marginLeft="34dp"
            android:layout_marginTop="27dp"
            android:layout_toRightOf="@id/awayteam" />

        <!-- Filtre date de début (par défaut année en cours) -->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/date_debut"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_below="@id/awayteam"
            android:layout_marginTop="30dp"
            android:backgroundTint="#4CAF50"
            android:text="@string/date_debut_datepicker"
            android:textColor="@color/white"
            app:cornerRadius="24dp" />



        <!-- Filtre date de fin (par défaut année en cours) -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/date_fin"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_toRightOf="@id/date_debut"
            android:layout_marginLeft="30dp"
            android:layout_alignBottom="@id/date_debut"
            android:backgroundTint="#4CAF50"
            android:text="@string/date_fin_datepicker"
            android:textColor="@color/white"
            app:cornerRadius="24dp" />


        <!-- Filtre sur les matchs à domicile, à l'éxtérieur et globaux -->

        <!-- Filtre sur l'heure minimum et maximum à laquelle se joue les matchs -->

        <!-- Filtre sur les victoire, matchs nul ou défaite -->

        <!-- Filtre sur les matchs de plus ou moins 0.5, 1.5, 2.5, 3.5 etc buts -->

        <!-- Bouton d'analyse statistiques -->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/analyticStatsButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="30dp"
            android:layout_below="@id/date_debut"
            android:backgroundTint="#F44336"
            android:text="@string/analyse_stat_text"
            android:textColor="@color/white"
            app:cornerRadius="24dp" />

        <!-- BarChart Goals for Home Team-->
        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/chartHomeGF"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/analyticStatsButton" />

        <!-- BarChart Goals for Away Team-->
        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/chartAwayGF"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/chartHomeGF" />



    </RelativeLayout>
</androidx.core.widget.NestedScrollView>